--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "^5.26.4"
   },
   "devDependencies": {
     "@types/node": "^20",
