--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18",
     "react-tooltip": "^5.26.4"
   },
