--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.18",
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18",
+    "react-modern-drawer": "^1.3.1",
     "react-tooltip": "^5.26.4"
   },
   "devDependencies": {
