--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18",
     "react-modern-drawer": "^1.3.1",
-    "react-tooltip": "^5.26.4"
+    "react-tooltip": "^5.26.4",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
