Fix the postcss processing errors resulting in missing css in prod builds. Move everything under src folder.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "cssModules.camelCase": true,
   "cssModules.pathAlias": {
-    "@": "${workspaceFolder}/app"
+    "@": "${workspaceFolder}/src"
   },
   "editor.quickSuggestions": {
     "strings": "on"
