--- a/package.json
+++ b/package.json
@@ -27,17 +27,19 @@
     "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18",
     "react-modern-drawer": "^1.3.1",
-    "react-tooltip": "^5.26.4",
-    "sharp": "^0.33.4"
+    "react-tooltip": "^5.26.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "postcss-nesting": "^12.1.5",
     "rimraf": "^5.0.7",
+    "sharp": "^0.33.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
