--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@next/third-parties": "^14.2.3",
     "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
@@ -26,6 +27,7 @@
     "react": "^18",
     "react-awesome-reveal": "^4.2.11",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-modern-drawer": "^1.3.1",
     "react-tooltip": "^5.26.4"
   },
@@ -33,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
