Update env example.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_RPC_ENDPOINT_URL=https://api.tatum.io/v3/blockchain/node/solana-mainnet
 NEXT_PUBLIC_RPC_API_KEY=
-NEXT_PUBLIC_BACKUP_RPC_ENDPOINT_URL=https://api.mainnet-beta.solana.com
+NEXT_PUBLIC_BACKUP_RPC_ENDPOINT_URLS=https://api.tatum.io/v3/blockchain/node/solana-mainnet,https://api.mainnet-beta.solana.com,https://solana-api.projectserum.com,https://rpc.ankr.com/solana,https://solana.api.onfinality.io/public,https://solana.drpc.org
 
 NEXT_PUBLIC_DEFAULT_SOURCE_TA=So11111111111111111111111111111111111111112
 NEXT_PUBLIC_NYC_TA=GGLERd7QeMe5wa6Zstr2BMFbaNbdeSaRhPyugNpaKyx3
