--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-modern-drawer": "^1.3.1",
-    "react-tooltip": "^5.26.4"
+    "react-tooltip": "^5.26.4",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -42,7 +43,6 @@
     "postcss": "^8",
     "postcss-nesting": "^12.1.5",
     "rimraf": "^5.0.7",
-    "sharp": "^0.33.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
