--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NEXT_PUBLIC_BACKUP_RPC_ENDPOINT_URLS=https://api.tatum.io/v3/blockchain/node/sol
 NEXT_PUBLIC_DEFAULT_SOURCE_TA=So11111111111111111111111111111111111111112
 NEXT_PUBLIC_NYC_TA=GGLERd7QeMe5wa6Zstr2BMFbaNbdeSaRhPyugNpaKyx3
 NEXT_PUBLIC_TOKEN_PAIR_ID=7p5yMdMJLQX2QCM7wD3sm6G7bgsKFvkUCZMpVRtxRQcj
+
+NEXT_PUBLIC_GTM_ID=
