--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
-NEXT_PUBLIC_RPC_ENDPOINT_URL=https://api.tatum.io/v3/blockchain/node/solana-mainnet
+NEXT_PUBLIC_RPC_ENDPOINT_URL=https://api.mainnet-beta.solana.com
 NEXT_PUBLIC_RPC_API_KEY=
-NEXT_PUBLIC_BACKUP_RPC_ENDPOINT_URLS=https://api.tatum.io/v3/blockchain/node/solana-mainnet,https://api.mainnet-beta.solana.com,https://solana-api.projectserum.com,https://rpc.ankr.com/solana,https://solana.api.onfinality.io/public,https://solana.drpc.org
+NEXT_PUBLIC_BACKUP_RPC_ENDPOINT_URLS=https://api.mainnet-beta.solana.com,https://api.tatum.io/v3/blockchain/node/solana-mainnet,https://solana-api.projectserum.com,https://rpc.ankr.com/solana,https://solana.api.onfinality.io/public,https://solana.drpc.org
 
 NEXT_PUBLIC_DEFAULT_SOURCE_TA=So11111111111111111111111111111111111111112
 NEXT_PUBLIC_NYC_TA=GGLERd7QeMe5wa6Zstr2BMFbaNbdeSaRhPyugNpaKyx3
 NEXT_PUBLIC_TOKEN_PAIR_ID=7p5yMdMJLQX2QCM7wD3sm6G7bgsKFvkUCZMpVRtxRQcj
 
 NEXT_PUBLIC_GTM_ID=
+
+NEXT_PUBLIC_DEX_TOKENS_API_URL=https://api.dexscreener.com/latest/dex/tokens
+NEXT_PUBLIC_CITY_TAS=AfcvNFud8cQPKpCZtW8GBsJqi2LJNztFPu8d4vciveL3,BSzj2NpDETNSmtrhkDucqvNF7M9X2xr7NEG7nPqwso1U,36MFYD5yx1mApewsXp1RbDoTBS6nEXv8cgNoyagSoGqy,CnJgfGr3N1PTJ1kYk1Wr3rzzLeG6sXBjNupcfDgYShXQ,7WGLjwCE61jPuzUX4wrWagvtjtgTv7A4JmhXpCViG4yB,3p5YYaPWDRUcpQy8CPB3ySyk1w6RbFMfjuVdSmsH5XQJ
+NEXT_PUBLIC_PREFERRED_DEX_ID=raydium
