--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-nesting": "^12.1.5",
     "rimraf": "^5.0.7",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "utility-types": "^3.11.0"
   }
 }
