Move City Index to own page.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,6 @@ NEXT_PUBLIC_TOKEN_PAIR_ID=7p5yMdMJLQX2QCM7wD3sm6G7bgsKFvkUCZMpVRtxRQcj
 NEXT_PUBLIC_GTM_ID=
 
 NEXT_PUBLIC_DEX_TOKENS_API_URL=https://api.dexscreener.com/latest/dex/tokens
-NEXT_PUBLIC_CITY_TAS=AfcvNFud8cQPKpCZtW8GBsJqi2LJNztFPu8d4vciveL3,BSzj2NpDETNSmtrhkDucqvNF7M9X2xr7NEG7nPqwso1U,36MFYD5yx1mApewsXp1RbDoTBS6nEXv8cgNoyagSoGqy,CnJgfGr3N1PTJ1kYk1Wr3rzzLeG6sXBjNupcfDgYShXQ,7WGLjwCE61jPuzUX4wrWagvtjtgTv7A4JmhXpCViG4yB,3p5YYaPWDRUcpQy8CPB3ySyk1w6RbFMfjuVdSmsH5XQJ
+NEXT_PUBLIC_CITY_TAS=AfcvNFud8cQPKpCZtW8GBsJqi2LJNztFPu8d4vciveL3,BSzj2NpDETNSmtrhkDucqvNF7M9X2xr7NEG7nPqwso1U,36MFYD5yx1mApewsXp1RbDoTBS6nEXv8cgNoyagSoGqy,CnJgfGr3N1PTJ1kYk1Wr3rzzLeG6sXBjNupcfDgYShXQ,7WGLjwCE61jPuzUX4wrWagvtjtgTv7A4JmhXpCViG4yB,3p5YYaPWDRUcpQy8CPB3ySyk1w6RbFMfjuVdSmsH5XQJ,4wCBNnzqVF28EW7vtJmmYoPB9Bg5RvzcDGFaRU1n7gsp
 NEXT_PUBLIC_PREFERRED_DEX_ID=raydium
 NEXT_PUBLIC_CITY_IDX_REFRESH_INTERVAL=10000
